[package]
name = "htma-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking"] }
once_cell = "1.21.3"
thiserror = "2.0.12"
scraper = { version = "0.23.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.41", features = ["serde"] }